--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
-    margin: 50px;
+    margin: 20px;
     box-sizing: border-box;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    background-color: #E5E5E5;
+}
+a {
+    color: black;
 }
