--- a/src/components/addtask/addtask.css
+++ b/src/components/addtask/addtask.css
@@ -2,10 +2,42 @@
     width: 90%;
     display: flex;
     justify-content: center;
-    align-items: center;
-    border: 2px solid black;
-    height: 500px;
+    align-items: flex-start;
+    height: 100%;
+    background-color: #FFFFFF;
 }
-.add-task-form input {
+.add-task-form {
+    margin-top: 100px;
+    width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.form-group {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.form-group:last-child {
+    margin-top: 30px;
+}
+.form-group:last-child button {
+    width: 100px;
+    height: 50px;
+    background-color: #675BF1;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+}
+.form-group label{
+    font-weight: 600;
+    width: 20%;
+}
+.form-group input {
+    width: 80%;
+    border: none;
+    border-bottom: 2px solid black;
 }
