--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,9 +1,12 @@
 .container {
+    width: 1024px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 .main {
+    width: 100%;
+    height: 600px;
     display: flex;
-    margin-top: 40px;
     justify-content: flex-start;
 }
