--- a/src/components/home/sidebar/sidebar.css
+++ b/src/components/home/sidebar/sidebar.css
@@ -1,12 +1,25 @@
 .header-sidebar {
     display: flex;
     flex-direction: column;
-    width: 10%;
-    max-height: 200px;
+    width: 15%;
+    height: 100%;
     align-items: center;
+    justify-content: flex-start;
+    background: #F88F14;
 }
-.header-sidebar .button button {
-    margin-bottom: 10px;
-    width: 92%;
+.header-sidebar a {
+    width: 100%;
+}
+.header-sidebar .btn button {
+    cursor: pointer;
+    border: none;
+    background: #F88F14;
+    border-bottom: 2px solid #FFFFFF;
+    width: 100%;
     height: 40px;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+.header-sidebar .btn button:active {
+    color: #675BF1;
 }
