--- a/src/components/showtask/showtask.css
+++ b/src/components/showtask/showtask.css
@@ -1,19 +1,99 @@
 .show-task {
-    width: 90%;
+    width: 85%;
     display: flex;
-    border: 2px solid black;
+    flex-direction: column;
+    align-items: center;
+    /* border: 2px solid #675BF1; */
     height: 600px;
-    flex-wrap: wrap;
+    background-color: #FFFEFE;
+}
+.task-list{
+    margin: 10px;
+    margin-left: 30px;
+    display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 90%;
 }
-.task-list {
-    width: 24.7%;
-    border: 1px solid black;
-    height: 24%;
+.task-item {
+    width: 21.5%;
+    border: 2px solid #675BF1;
+    height: 28%;
+    margin: 10px;
+    border-radius: 10px;
 }
-.task-list div {
-    padding: 8px;
+.task-item-title {
+    font-weight: 600;
+    padding: 8px 8px 4px 8px;
+}
+.task-item-creator {
+    padding: 0px 8px 4px 8px;
+}
+.task-item-description {
+    padding: 8px 8px 4px 8px;
+}
+.task-item-description span {
+    font-weight: 600;
+}
+.task-item-status {
+    padding: 0px 8px 4px 8px;
+    font-weight: 600;
+}
+.task-item-line {
+    margin-left: 8px;
+    width: 90%;
+    border-bottom: 2px solid #675BF1;
+}
+.task-item-status.new {
+    color: #04BE00;
+}
+.task-item-status.doing {
+    color: #F88F14;
+}
+.task-item-status.done {
+    color: #675BF1;
+}
+
+.task-item-description {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+
+
+/* pagination */
+.pagination {
+    width: 100%;
+    height: 10%;
+    margin: 0 0 10px 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+}
+.pagination .page-num {
+    width: 25px;
+    padding: 8px 10px;
+    cursor: pointer;
+    border: 1px solid #675BF1;
+    border-radius: 3px;
+    font-weight: 600;
+    color: #675BF1;
+    background-color: #FFF;
+
+}
+.pagination .page-num:hover {
+    background-color: #675BF1;
+    color: #FFF;
+}
+.pagination .active{
+    background-color: #675BF1;
+    color: #FFF;
 }
 a:-webkit-any-link {
     text-decoration: none;
